[tool.poetry]
name = "hw-09"
version = "0.1.0"
description = ""
authors = ["NataSha157 <shnataliya77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
mongoengine = "0.27"
pymongo = "3.11"
dnspython = "1.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
